# colmeia

./: Cargo.toml  Makefile  README.md
.github/workflows/: cross_compile.yml  main.yml
colmeia-bins/: Cargo.toml
colmeia-dat-core/: Cargo.toml
colmeia-dat-core/src/: lib.rs
colmeia-dat-hypercore-v7/: Cargo.toml
colmeia-dat-hypercore-v7/src/: lib.rs
colmeia-dat-mdns/: Cargo.toml
colmeia-dat-mdns/src/: announce.rs  crypto.rs  lib.rs  locate.rs  socket.rs
colmeia-dat-proto/: Cargo.toml  build.rs
colmeia-dat-proto/protos/: schema.proto
colmeia-dat-proto/src/: cipher.rs  lib.rs  socket.rs
colmeia-dat1/: Cargo.toml
colmeia-dat1-core/: Cargo.toml
colmeia-dat1-ffi/: Cargo.toml
colmeia-dat1-ffi/src/: lib.rs
colmeia-dat1-mdns/: Cargo.toml
colmeia-dat1-mdns/src/: announce.rs  lib.rs  locate.rs
colmeia-dat1-proto/: Cargo.toml
colmeia-dat1-proto/src/: cipher.rs  lib.rs  schema.rs  socket.rs
colmeia-dat1/src/: hypercore.rs  hyperdrive.rs  lib.rs  schema.rs
colmeia-dat1/src/network/: hypercore.rs  hyperdrive.rs  mod.rs
colmeia-hypercore/: Cargo.toml  README.md
colmeia-hypercore-utils/: Cargo.toml
colmeia-hypercore-utils/src/: lib.rs
colmeia-hypercore/src/: hyperdrive.rs  hyperstack.rs  lib.rs  network.rs  observer.rs  schema.rs  utils.rs
colmeia-hypercore/src/network/: hypercore.rs  hyperdrive.rs  mod.rs
colmeia-hypercore/src/observer/: event.rs  message.rs  mod.rs
colmeia-hyperdrive/: Cargo.toml  README.md  build.rs
colmeia-hyperdrive/src/: hyperdrive.rs  lib.rs  network.rs  schema.rs
colmeia-hyperstack/: Cargo.toml  README.md
colmeia-hyperstack/src/: hyperstack.rs  lib.rs
colmeia-hyperswarm-dht/: Cargo.toml
colmeia-hyperswarm-dht/src/: announcer.rs  dht.rs  lib.rs  locator.rs
colmeia-hyperswarm-mdns/: Cargo.toml  README.md
colmeia-hyperswarm-mdns/src/: announcer.rs  lib.rs  locator.rs  socket.rs
colmeia-mdns/: Cargo.toml
colmeia-mdns/src/: announce.rs  crypto.rs  lib.rs  locate.rs  socket.rs
colmeia-proto/: Cargo.toml
colmeia-proto/src/: lib.rs
colmeia_app/: README.md  pubspec.yaml
colmeia_app/android/app/: build.gradle
colmeia_app/android/app/src/main/: AndroidManifest.xml
colmeia_app/android/app/src/main/kotlin/com/example/colmeia_app/: MainActivity.kt
colmeia_app/android/app/src/profile/: AndroidManifest.xml
colmeia_app/colmeia_native/: .metadata  README.md  pubspec.yaml
colmeia_app/colmeia_native/android/: build.gradle  settings.gradle
colmeia_app/colmeia_native/android/gradle/wrapper/: gradle-wrapper.properties
colmeia_app/colmeia_native/android/src/main/: AndroidManifest.xml
colmeia_app/colmeia_native/android/src/main/kotlin/com/example/colmeia_native/: ColmeiaNativePlugin.kt
colmeia_app/colmeia_native/example/: README.md  pubspec.yaml
colmeia_app/colmeia_native/example/android/app/: build.gradle
colmeia_app/colmeia_native/example/android/app/src/main/: AndroidManifest.xml
colmeia_app/colmeia_native/example/android/app/src/main/kotlin/com/example/colmeia_native_example/: MainActivity.kt
colmeia_app/colmeia_native/example/android/app/src/profile/: AndroidManifest.xml
colmeia_app/colmeia_native/example/ios/: Podfile
colmeia_app/colmeia_native/example/ios/Runner/: Info.plist
colmeia_app/colmeia_native/example/ios/Runner.xcodeproj/: project.pbxproj
colmeia_app/colmeia_native/example/lib/: main.dart
colmeia_app/colmeia_native/example/test/: widget_test.dart
colmeia_app/colmeia_native/ios/: colmeia_native.podspec
colmeia_app/colmeia_native/ios/Classes/: ColmeiaNativePlugin.h  ColmeiaNativePlugin.m  SwiftColmeiaNativePlugin.swift
colmeia_app/colmeia_native/ios/libs/: libcolmeia_dat1_ffi.h
colmeia_app/colmeia_native/lib/: colmeia_native.dart
colmeia_app/colmeia_native/test/: colmeia_native_test.dart
colmeia_app/ios/Runner/: Info.plist
colmeia_app/ios/Runner.xcodeproj/: project.pbxproj
colmeia_app/test/: widget_test.dart
colmeiad/: Cargo.toml
colmeiad/src/: main.rs
flutter/colmeia_native/: README.md
flutter/colmeia_native/android/: build.gradle  settings.gradle
flutter/colmeia_native/example/: pubspec.yaml
flutter/colmeia_native/example/android/app/src/main/kotlin/com/example/colmeia_native_example/: MainActivity.kt
flutter/colmeia_native/example/android/app/src/profile/: AndroidManifest.xml
flutter/colmeia_native/example/test/: widget_test.dart
flutter/colmeia_native/ios/: colmeia_native.podspec
flutter/colmeia_native/ios/Classes/: ColmeiaNativePlugin.h  ColmeiaNativePlugin.m
legacy/: Cargo.toml  Makefile  README.md
legacy/colmeia-dat1/: Cargo.toml
legacy/colmeia-dat1-ffi/src/: lib.rs
legacy/colmeia-dat1-mdns/: Cargo.toml
legacy/colmeia-dat1-mdns/src/: lib.rs  locate.rs  socket.rs
legacy/colmeia-dat1-proto/: build.rs
legacy/colmeia-dat1/protos/: schema.proto
legacy/colmeia-dat1/src/: hyperdrive.rs
legacy/colmeia-dat1/src/network/: hyperdrive.rs  mod.rs
legacy/flutter/colmeia_native/: pubspec.yaml
legacy/flutter/colmeia_native/android/gradle/wrapper/: gradle-wrapper.properties
legacy/flutter/colmeia_native/android/src/main/: AndroidManifest.xml
legacy/flutter/colmeia_native/android/src/main/kotlin/com/example/colmeia_native/: ColmeiaNativePlugin.kt
legacy/flutter/colmeia_native/example/: README.md
legacy/flutter/colmeia_native/example/android/app/: build.gradle
legacy/flutter/colmeia_native/example/android/app/src/main/: AndroidManifest.xml
legacy/flutter/colmeia_native/example/ios/Runner/: Info.plist
legacy/flutter/colmeia_native/example/ios/Runner.xcodeproj/: project.pbxproj
legacy/flutter/colmeia_native/example/lib/: main.dart
legacy/flutter/colmeia_native/ios/Classes/: SwiftColmeiaNativePlugin.swift
legacy/flutter/colmeia_native/lib/: colmeia_native.dart
