[package]
name = 'colmeia'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[workspace]
members = [
    'colmeia-dat1-mdns',
    'colmeia-dat1-proto',
    'colmeia-dat1-core',
    'colmeia-dat1',
]

[dependencies]
futures = '*'
env_logger = '*'
hex = '*'
anyhow = '*'

[dependencies.colmeia-dat1-mdns]
path = 'colmeia-dat1-mdns'

[dependencies.colmeia-dat1-proto]
path = 'colmeia-dat1-proto'

[dependencies.async-std]
version = '1.5.0'
features = ['unstable']

[dependencies.colmeia-dat1-core]
path = 'colmeia-dat1-core'

[dependencies.colmeia-dat1]
path = 'colmeia-dat1'
