[package]
name = 'colmeia'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[workspace]
members = [
    'colmeia-hyperswarm-mdns',
    'colmeia-hypercore-utils',
    'colmeia-hypercore',
]

[dependencies]
futures = '*'
env_logger = '*'
hex = '*'
anyhow = '*'

[dependencies.async-std]
version = '1.6.2'
features = ['unstable']

[dependencies.hypercore-protocol]
git = 'https://github.com/Frando/hypercore-protocol-rs.git'

[dependencies.colmeia-hyperswarm-mdns]
path = 'colmeia-hyperswarm-mdns'

[dependencies.colmeia-hypercore-utils]
path = 'colmeia-hypercore-utils'

[dependencies.colmeia-hypercore]
path = 'colmeia-hypercore'