[package]
name = 'colmeia-bins'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
env_logger = '*'
log = '*'
hex = '*'

[dependencies.async-std]
version = '1.9.0'
features = ['unstable']

[dependencies.hypercore-protocol]
git = 'https://github.com/Frando/hypercore-protocol-rs'

[dependencies.colmeia-hyperswarm-mdns]
path = '../colmeia-hyperswarm-mdns'

[dependencies.colmeia-hyperstack]
path = '../colmeia-hyperstack'
