[package]
name = 'colmeia-dat-proto'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
varinteger = '1.0.6'
futures = '0.3'
log = '0.4.8'
protobuf = '=2.10.1'

[dependencies.dat-network-protocol]
version = '1.0.0'
git = 'https://github.com/bltavares/dat-network-protocol'
branch = 'update-schema'

[dependencies.async-std]
version = '1.4.0'
features = ['unstable']

[dependencies.simple-message-channels]
path = '../../datrs/simple-message-channels'
