[package]
name = 'colmeia-dat-proto'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
futures = '0.3'
log = '0.4.8'
protobuf = '2.10.1'
rand = '0.7.3'
salsa20 = '0.4.0'
simple-message-channels = '0.1.0'

[dependencies.colmeia-dat-core]
path = '../colmeia-dat-core'

[dependencies.async-std]
version = '1.4.0'
features = ['unstable']

[build-dependencies]
protobuf-codegen-pure = '2.10.1'
