[package]
name = 'colmeia-dat1-ffi'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
env_logger = '0.7.1'

[dependencies.async-std]
version = '1.5.0'
features = ['unstable']

[dependencies.colmeia-dat1-core]
path = '../colmeia-dat1-core'

[dependencies.colmeia-dat1]
path = '../colmeia-dat1'
