[package]
name = 'colmeia-dat1-mdns'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
futures = '0.3'
lazy_static = '1.4.0'
trust-dns-proto = '0.19.2'
base64 = '0.11.0'
log = '0.4.8'
rand = '0.7.3'

[dependencies.colmeia-dat1-core]
path = '../colmeia-dat1-core'

[dependencies.async-std]
version = '1.5.0'
features = ['unstable']

[dependencies.socket2]
version = '0.3.11'
features = ['reuseport']
