[package]
name = 'colmeia-dat1'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
anyhow = '1.0.26'
random-access-storage = '3.0.0'
failure = '0.1.6'
random-access-memory = '1.1.0'
random-access-disk = '1.0.0'
async-trait = '0.1.24'
async-std = '1.5.0'
protobuf = '2.10.1'
crossbeam-queue = '0.2.1'
futures = '0.3'
log = '0.4.8'
bitfield-rle = '0.1.1'

[dependencies.colmeia-dat1-mdns]
path = '../colmeia-dat1-mdns'

[dependencies.colmeia-dat1-core]
path = '../colmeia-dat1-core'

[dependencies.colmeia-dat1-proto]
path = '../colmeia-dat1-proto'

[dependencies.hypercore]
version = '0.11.0'
git = 'https://github.com/bltavares/hypercore'
branch = 'wip'

[build-dependencies]
protobuf-codegen-pure = '2.10.1'
