[package]
name = 'colmeia-dat1'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
anyhow = '1.0.26'
random-access-storage = '3.0.0'
async-trait = '0.1.24'
protobuf = '2.10.1'
crossbeam-queue = '0.2.1'
futures = '0.3'
log = '0.4.8'

[dependencies.async-std]
version = '1.6.0'
features = ['unstable']

[dependencies.bitfield-rle]
version = '0.1.1'
git = 'https://github.com/bltavares/bitfield-rle'
branch = 'failure-into-stderr'

[dependencies.random-access-disk]
version = '1.0.0'
git = 'https://github.com/bltavares/random-access-disk'
branch = 'failure-into-stderr'

[dependencies.random-access-memory]
version = '1.1.0'
git = 'https://github.com/bltavares/random-access-memory'
branch = 'failure-into-stderr'

[dependencies.colmeia-dat1-mdns]
path = '../colmeia-dat1-mdns'

[dependencies.colmeia-dat1-core]
path = '../colmeia-dat1-core'

[dependencies.colmeia-dat1-proto]
path = '../colmeia-dat1-proto'

[dependencies.hypercore]
version = '0.11.0'
git = 'https://github.com/bltavares/hypercore'
branch = 'wip'

[build-dependencies]
protobuf-codegen-pure = '2.10.1'
