[package]
name = 'colmeia-hypercore'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
futures = '0.3.12'
anyhow = '1.0.38'
random-access-storage = '4.0.0'
log = '0.4.14'
bitfield-rle = '0.2.0'

[dependencies.async-std]
version = '1.9.0'
features = ['unstable']

[dependencies.hypercore-protocol]
git = 'https://github.com/Frando/hypercore-protocol-rs'

[dependencies.hypercore]
git = 'https://github.com/bltavares/hypercore'
branch = 'update-ed25519-dalek'
