[package]
name = 'colmeia-hyperswarm-dht'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
anyhow = '1.0.38'
futures = '0.3.12'
log = '0.4.14'

[dependencies.hyperswarm-dht]
git = 'https://github.com/bltavares/hyperswarm-dht'
branch = 'wip'

[dependencies.async-std]
version = '1.9.0'
features = ['unstable']

[dependencies.async-broadcast]
git = "https://github.com/bltavares/async-broadcast"
branch = "master"

