[package]
name = 'colmeia-hyperswarm-mdns'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
hex = '0.4.2'
trust-dns-proto = '0.19.5'
socket2 = '0.3.12'
lazy_static = '1.4.0'
log = '0.4.8'

[dependencies.async-std]
version = '1.6.0'
features = ['unstable']
