[package]
name = 'colmeia-hyperswarm-mdns'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
hex = '0.4.2'
trust-dns-proto = '0.19.5'
lazy_static = '1.4.0'
log = '0.4.8'
futures = '0.3.5'
anyhow = '1.0.34'
rand = '0.7.3'
multicast-socket = '0.2.0'

[dependencies.async-std]
version = '1.6.0'
features = ['unstable']
