[package]
name = 'colmeia-mdns'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
async-std = '1.4.0'
blake2-rfc = '0.2.18'
ed25519-dalek = '0.9.1'
futures = '0.3'
hex = '0.4.0'
lazy_static = '1.4.0'
parse-dat-url = '0.1.0'
trust-dns-proto = '0.19.0'

[dependencies.socket2]
version = '0.3.11'
features = ['reuseport']
