[package]
name = 'colmeiad'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
tide = '0.12.0'
log = '0.4.11'
env_logger = '0.7.1'
random-access-storage = '4.0.0'
anyhow = '1.0.31'
hypercore = '0.11.1-beta.9'
futures = '0.3.5'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.colmeia-hypercore]
path = '../colmeia-hypercore'

[dependencies.async-std]
version = '1.6.0'
features = [
    'unstable',
    'attributes',
]
