[package]
name = 'colmeiad'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
tide = '0.12.0'
env_logger = '0.7.1'
random-access-storage = '4.0.0'
hypercore = '0.11.1-beta.9'
futures = '0.3.5'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.colmeia-hyperstack]
path = '../colmeia-hyperstack'

[dependencies.async-std]
version = '1.6.0'
features = [
    'unstable',
    'attributes',
]
