[package]
name = 'colmeiad'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'

[dependencies]
tide = '0.16.0'
env_logger = '0.8.2'
random-access-storage = '4.0.0'
futures = '0.3.12'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.colmeia-hyperstack]
path = '../colmeia-hyperstack'

[dependencies.async-std]
version = '1.9.0'
features = [
    'unstable',
    'attributes',
]

[dependencies.hypercore]
git = 'https://github.com/bltavares/hypercore'
branch = 'update-ed25519-dalek'
